// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:property 1`] = `
<div>
  <div
    class="cxd-Property cxd-Property--table"
  >
    <table>
      <thead>
        <tr>
          <th
            colspan="6"
          >
            机器配置
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>
            <span
              class="cxd-TplField"
            >
              <span>
                cpu
              </span>
            </span>
          </th>
          <td
            colspan="1"
          >
            <span
              class="cxd-TplField"
            >
              <span>
                1 core
              </span>
            </span>
          </td>
          <th>
            <span
              class="cxd-TplField"
            >
              <span>
                memory
              </span>
            </span>
          </th>
          <td
            colspan="1"
          >
            <span
              class="cxd-TplField"
            >
              <span>
                4G
              </span>
            </span>
          </td>
          <th>
            <span
              class="cxd-TplField"
            >
              <span>
                disk
              </span>
            </span>
          </th>
          <td
            colspan="1"
          >
            <span
              class="cxd-TplField"
            >
              <span>
                80G
              </span>
            </span>
          </td>
        </tr>
        <tr>
          <th>
            <span
              class="cxd-TplField"
            >
              <span>
                network
              </span>
            </span>
          </th>
          <td
            colspan="3"
          >
            <span
              class="cxd-TplField"
            >
              <span>
                4M
              </span>
            </span>
          </td>
          <th>
            <span
              class="cxd-TplField"
            >
              <span>
                IDC
              </span>
            </span>
          </th>
          <td
            colspan="1"
          >
            <span
              class="cxd-TplField"
            >
              <span>
                beijing
              </span>
            </span>
          </td>
        </tr>
        <tr>
          <th>
            <span
              class="cxd-TplField"
            >
              <span>
                Note
              </span>
            </span>
          </th>
          <td
            colspan="5"
          >
            <span
              class="cxd-TplField"
            >
              <span>
                其它说明
              </span>
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Renderer:property simple 1`] = `
<div>
  <div
    class="cxd-Property cxd-Property--simple"
  >
    <table>
      <thead>
        <tr>
          <th
            colspan="3"
          >
            机器配置
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colspan="1"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  cpu
                </span>
              </span>
            </span>
            ：
            <span
              class="cxd-TplField"
            >
              <span>
                1 core
              </span>
            </span>
          </td>
          <td
            colspan="1"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  memory
                </span>
              </span>
            </span>
            ：
            <span
              class="cxd-TplField"
            >
              <span>
                4G
              </span>
            </span>
          </td>
          <td
            colspan="1"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  disk
                </span>
              </span>
            </span>
            ：
            <span
              class="cxd-TplField"
            >
              <span>
                80G
              </span>
            </span>
          </td>
        </tr>
        <tr>
          <td
            colspan="2"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  network
                </span>
              </span>
            </span>
            ：
            <span
              class="cxd-TplField"
            >
              <span>
                4M
              </span>
            </span>
          </td>
          <td
            colspan="1"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  IDC
                </span>
              </span>
            </span>
            ：
            <span
              class="cxd-TplField"
            >
              <span>
                beijing
              </span>
            </span>
          </td>
        </tr>
        <tr>
          <td
            colspan="3"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  Note
                </span>
              </span>
            </span>
            ：
            <span
              class="cxd-TplField"
            >
              <span>
                其它说明
              </span>
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
